minor performance improvement from sonar analysis